fixed: dark mode in dropdown and dislike btn

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -312,7 +312,6 @@ html {
 }
 
 .dropdown-btn{
-  color: var(--white-text-color);
   width: 100%;
 }
 
